--- a/src/css/GetInTouch.css
+++ b/src/css/GetInTouch.css
@@ -1,4 +1,3 @@
-/* styles.css */
 .get-in-touch {
 	background-color: #3e1e67;
 	color: #ffffff;
@@ -11,6 +10,7 @@
 	display: inline-block;
 	transition: all 0.3s ease 0s;
 	margin-top: 5%;
+	max-width: fit-content;
 }
 
 .get-in-touch:hover {
