--- a/src/css/Homepage.css
+++ b/src/css/Homepage.css
@@ -7,6 +7,7 @@ a {
   border: none; /* Removes border */
   padding: 0; /* Resets padding */
   margin: 0; /* Resets margin */
+  width: fit-content;
 }
 
 #homepage {
@@ -93,6 +94,7 @@ a {
 	line-height: 1;
 	letter-spacing: -0.025em;
 	font-weight: bold;
+  width: fit-content;
 }
 
 #project-img {
@@ -152,6 +154,7 @@ a {
 		width: 1000px;
 	}
 }
+
 @media (max-width: 1024px) {
   #logo{
     display: none;
